--- a/MegaCOM/res/values/strings.xml
+++ b/MegaCOM/res/values/strings.xml
@@ -22,11 +22,19 @@
     <string name="create_account_activity">Create account</string>
     <string name="create_account_text">Create an account</string>
     <string name="name_text">name</string>
-    <string name="tos1">I agree with MEGA\'s </string>
-    <string name="tos2">terms of service</string>
+    <string name="tos">I agree with MEGA\'s &lt;a href="http://g.static.mega.co.nz/pages/terms.html"&gt;terms of service&lt;/a&gt;</string>
     <string name="button_create_account_text">Create account</string>
     <string name="already_account">Already have an account?</string>
     
     <string name="drawer_open">Drawer open</string>
 	<string name="drawer_close">Drawer close</string>
+	
+	<string name="section_cloud_drive">Cloud Drive</string>
+	<string name="section_saved_for_offline">Saved for Offline</string>
+	<string name="section_shared_with_me">Shared with me</string>
+	<string name="section_rubbish_bin">Rubbish Bin</string>
+	<string name="section_contacts">Contacts</string>
+	<string name="section_image_viewer">Image Viewer</string>
+	<string name="section_transfers">Transfers</string>
+	<string name="section_account">My Account</string>
 </resources>
