--- a/MegaCOM/res/values/strings.xml
+++ b/MegaCOM/res/values/strings.xml
@@ -36,6 +36,7 @@
 	<string name="section_account">My Account</string>
 	<string name="used_space">%1$s GB of %2$s GB</string>
 	
+	<string name="file_properties_activity">Properties</string>
 	<string name="file_properties_available_offline">Available offline</string>
 	<string name="file_properties_available_offline_on">ON</string>
 	<string name="file_properties_available_offline_off">OFF</string>
