--- a/MegaCOM/res/values/strings.xml
+++ b/MegaCOM/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">MEGA_COM</string>
         
     <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
     <string name="hello_world">PEPE</string>
     <string name="botonOcultarActionBar">Ocultar</string>
     <string name="botonVerActionBar">Ver</string>
