--- a/MegaCOM/res/values/strings.xml
+++ b/MegaCOM/res/values/strings.xml
@@ -53,4 +53,6 @@
 	<string name="contact_properties_info_email">E-mail: </string>
 	<string name="contact_properties_info_added">Added: </string>
 	
+	<string name="full_screen_image_viewer_label">Image Viewer</string>
+	
 </resources>
