Image Gallery with previews complete (setPreview, setThumbnail not working until Android SDK change)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -75,4 +75,6 @@
 	
 	<string name="full_screen_image_viewer_label">Image Viewer</string>
 	
+	<string name="error_not_enough_free_space">Not enough free space</string>
+	
 </resources>
