Navigation using the Navigation Drawer Home Icon. Folder history done with parentHandle. Empty folder or empty cloud images added.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -60,6 +60,9 @@
 	<string name="section_account">My Account</string>
 	<string name="used_space">%1$s GB of %2$s GB</string>
 	
+	<string name="file_browser_empty_cloud_drive">Empty Cloud Drive</string>
+    <string name="file_browser_empty_folder">Empty Folder</string>
+	
 	<string name="file_properties_activity">Properties</string>
 	<string name="file_properties_available_offline">Available offline</string>
 	<string name="file_properties_available_offline_on">ON</string>
