--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -95,4 +95,5 @@
     <string name="error_file_size_greater_than_4gb">Most devices can\'t download files greater than 4GB. Your download will probably fail.</string>
 	
     <string name="context_get_link">Share Link</string>
+    <string name="context_rename">Rename</string>
 </resources>
