--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -98,6 +98,11 @@
 	
     <string name="context_get_link">Share Link</string>
     <string name="context_rename">Rename</string>
-    
+    <string name="context_renaming">Renaming</string>
+    <string name="context_moving">Moving document</string>
+    <string name="context_creating_link">Creating link</string>
+    <string name="context_moving_to_trash">Moving to trash</string>
+    <string name="context_move_to_trash">Move to Rubbish Bin</string>
+  
     <string name="menu_new_folder">New folder</string>
 </resources>
