Sort by implemented

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="general_create">Create</string>
     <string name="general_upload">File Upload</string>
     <string name="general_download">Download</string>
+    <string name="general_sort_by">Sort by</string>
             
     <string name="action_logout">Logout</string>
     <string name="action_settings">Settings</string>
