--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="general_upload">File Upload</string>
     <string name="general_download">Download</string>
     <string name="general_sort_by">Sort by</string>
+    <string name="general_add">Add</string>
             
     <string name="action_logout">Logout</string>
     <string name="action_settings">Settings</string>
@@ -110,10 +111,13 @@
     <string name="context_moving_to_trash">Moving to trash</string>
     <string name="context_move_to_trash">Move to Rubbish Bin</string>
     <string name="context_new_folder_name">Folder Name</string>
+    <string name="context_new_contact_name">Contact email</string>
     <string name="context_creating_folder">Creating folder</string>
+    <string name="context_adding_contact">Adding contact</string>
     <string name="context_download_to">Save to</string>
   
     <string name="menu_new_folder">New folder</string>
+    <string name="menu_add_contact">Add contact</string>
     
     <string name="upload_to_image">Image</string>
 	<string name="upload_to_audio">Audio</string>
