Download public link (first attemp: with errors yet) - The progress dialog doesn't close - When the app is not opened, the import dialog doesn't appear - When downloading, the name of the file is like fileName.pdffileName.pdf - Sometimes the app crashes when clicking the link

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,9 @@
     <string name="general_sort_by">Sort by</string>
     <string name="general_add">Add</string>
     <string name="general_empty">Empty</string>
+    <string name="general_loading">Loading&#8230;</string>
+    <string name="general_importing">Importing&#8230;</string>
+    <string name="general_import">Import</string>
             
     <string name="action_logout">Logout</string>
     <string name="action_settings">Settings</string>
@@ -137,6 +140,7 @@
   
     <string name="menu_new_folder">New folder</string>
     <string name="menu_add_contact">Add contact</string>
+    <string name="menu_download_from_link">Download from MEGA link</string>
     
     <string name="upload_to_image">Image</string>
 	<string name="upload_to_audio">Audio</string>
@@ -157,4 +161,5 @@
 	
 	<string name="manager_folder_is_empty">Empty Folder</string>
 	<string name="manager_new_folder_name">Folder Name</string>
+	<string name="manager_download_from_link_incorrect">Incorrect link format</string>
 </resources>
