--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -96,6 +96,7 @@
 	<string name="section_image_viewer">Image Viewer</string>
 	<string name="section_transfers">Transfers</string>
 	<string name="section_account">My Account</string>
+	<string name="used_space_text">Used Space</string>
 	<string name="used_space">%1$s of %2$s</string>
 	
 	<string name="file_browser_empty_cloud_drive">Empty Cloud Drive</string>
