--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,8 +28,15 @@
     <string name="general_pro_3">Pro III</string>
     
     <string name="action_logout">Logout</string>
+    <string name="action_add">Add</string>
+    <string name="action_create_folder">Create folder</string>
+    <string name="action_upload">Upload</string>
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="action_sort_by">Sort by...</string>
+    <string name="action_help">Help</string>
+    <string name="action_upgrade_account">Upgrade account</string>
     <string name="hello_world">PEPE</string>
     <string name="botonOcultarActionBar">Ocultar</string>
     <string name="botonVerActionBar">Ver</string>
@@ -96,7 +103,7 @@
 	<string name="section_shared_with_me">Shared with me</string>
 	<string name="section_rubbish_bin">Rubbish Bin</string>
 	<string name="section_contacts">Contacts</string>
-	<string name="section_image_viewer">Image Viewer</string>
+	<string name="section_image_viewer">Photo Sync</string>
 	<string name="section_transfers">Transfers</string>
 	<string name="section_account">My Account</string>
 	<string name="used_space_text">Used Space</string>
