--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -122,6 +122,11 @@
 	<string name="file_properties_info_size_folder">Content: </string>
 	<string name="file_properties_info_added">Added: </string>
 	<string name="file_properties_info_modified">Modified: </string>
+	<string name="file_properties_shared_folder_public_link">Public link</string>
+	<string name="file_properties_shared_folder_full_access">Full access</string>
+	<string name="file_properties_shared_folder_read_write">Read &amp; write</string>
+	<string name="file_properties_shared_folder_read_only">Read-only</string>
+	<string name="file_properties_shared_folder_shared_with">Shared with: </string>
 	
 	<string name="contact_properties_activity">Contact</string>
 	<string name="contact_properties_content">Content:</string>
