Bug solved when getting public node (megaapi.i, by Javier) & Transfers pause/restart & cancel all downloads

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -231,4 +231,7 @@
     
     <string name="import_correct">Imported correctly</string>
     
+    <string name="transfers_empty">No active transfers</string>
+    <string name="transfers_pause">All transfers are paused</string>
+    
 </resources>
