[AA-42] Progress bar while fetching nodes SOLVED Modifications in the intermediate C++ and JAVA layer Implementation of onRequestUpdate(...) in all the places where OnRequestListener was implemented Progress bar while fetching nodes

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="login_confirm_account">Confirm account</string>
     <string name="login_querying_signup_link">Checking validation link</string>
     <string name="login_confirming_account">Activating account</string>
+    <string name="login_preparing_filelist">Preparing file list</string>
     
     
     <string name="create_account_activity">Create account</string>
