--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -250,5 +250,9 @@
     <string name="cam_sync_data">Sync over Wi-Fi or data plan</string>
     <string name="cam_sync_ok">OK</string>
     <string name="cam_sync_skip">Skip</string>
+    <string name="settings_camera_notif_error_no_folder">Destination folder is unavailable</string>
+    <string name="settings_camera_notif_title">Syncing photos with MEGA</string>
+    <string name="settings_camera_notif_error">Photo Sync problem</string>
+    <string name="settings_camera_notif_complete">Photo Sync complete</string>
     
 </resources>
