Settings GUI and values read from SQLite

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -257,4 +257,20 @@
     <string name="settings_camera_notif_error">Photo Sync problem</string>
     <string name="settings_camera_notif_complete">Photo Sync complete</string>
     
+    <string name="settings_storage">Storage</string>
+    <string name="settings_camera_upload">Photo Sync</string>
+    <string name="settings_pin_lock">PIN Lock</string>
+    
+    <string name="settings_storage_download_location">Default download location</string>
+    <string name="settings_storage_ask_me_always">Ask location always</string>
+    
+    <string name="settings_camera_upload_on">Turn on Photo Sync</string>
+    <string name="settings_camera_upload_off">Turn off Photo Sync</string>
+    <string name="settings_camera_upload_how_to_upload">How to upload</string>
+    <string name="settings_camera_upload_what_to_upload">File Upload</string>
+    <string name="settings_camera_upload_folder">Camera folder</string>
+    
+    <string name="settings_pin_lock_on">Enable PIN Lock</string>
+    <string name="settings_pin_lock_off">Disable PIN Lock</string>
+    <string name="settings_pin_lock_code">PIN Code</string>    
 </resources>
