--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -291,4 +291,7 @@
     <string name="settings_pin_lock_off">Disable PIN Lock</string>
     <string name="settings_pin_lock_code">PIN Code</string> 
     <string name="settings_pin_lock_code_not_set">Not set</string>
+    
+    <string name="pin_lock_enter">Enter</string>
+    <string name="pin_lock_incorrect">Incorrect code</string>
 </resources>
