--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">MEGA_COM</string>
+    <string name="app_version">0.25</string>
     
     <string name="general_total_size">Total size</string>
     <string name="general_x_of_x"> of </string>
@@ -34,7 +35,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
     <string name="action_refresh">Refresh</string>
-    <string name="action_sort_by">Sort by...</string>
+    <string name="action_sort_by">Sort by&#8230;</string>
     <string name="action_help">Help</string>
     <string name="action_upgrade_account">Upgrade account</string>
     <string name="hello_world">PEPE</string>
@@ -294,4 +295,7 @@
     
     <string name="pin_lock_enter">Enter</string>
     <string name="pin_lock_incorrect">Incorrect code</string>
+    
+    <string name="settings_about">About</string>
+    <string name="settings_about_app_version">App version</string>
 </resources>
